--- a/index.html
+++ b/index.html
@@ -295,20 +295,20 @@
 
     // Đường dẫn ảnh (tương đối từ thư mục chứa file HTML này)
     const IMG = {
-      MLN: 'https://dngarsenal.github.io/MLN111/img/MLN.png',
-      x_icon: 'https://dngarsenal.github.io/MLN111/img/x_icon.png',
-      newYear: 'https://dngarsenal.github.io/MLN111/img/newYear.gif',
-      liXi: 'https://dngarsenal.github.io/MLN111/img/liXi.png',
-      Q1: 'https://dngarsenal.github.io/MLN111/img/Q1.png',
-      Q2: 'https://dngarsenal.github.io/MLN111/img/Q2.png',
-      Q3: 'https://dngarsenal.github.io/MLN111/img/Q3.png',
-      Q4: 'https://dngarsenal.github.io/MLN111/img/Q4.png',
-      Q5: 'https://dngarsenal.github.io/MLN111/img/Q5.png',
-      Q6: 'https://dngarsenal.github.io/MLN111/img/Q6.png',
-      Q7: 'https://dngarsenal.github.io/MLN111/img/Q7.png',
-      Q8: 'https://dngarsenal.github.io/MLN111/img/Q8.png',
-      Q9: 'https://dngarsenal.github.io/MLN111/img/Q9.png',
-      Q10: 'https://dngarsenal.github.io/MLN111/img/Q10.png'
+      MLN: 'https://dngarsenal.github.io/src/assets/MLN111/img/MLN.png',
+      x_icon: 'https://dngarsenal.github.io/src/assets/MLN111/img/x_icon.png',
+      newYear: 'https://dngarsenal.github.io/src/assets/MLN111/img/newYear.gif',
+      liXi: 'https://dngarsenal.github.io/src/assets/MLN111/img/liXi.png',
+      Q1: 'https://dngarsenal.github.io/src/assets/MLN111/img/Q1.png',
+      Q2: 'https://dngarsenal.github.io/src/assets/MLN111/img/Q2.png',
+      Q3: 'https://dngarsenal.github.io/src/assets/MLN111/img/Q3.png',
+      Q4: 'https://dngarsenal.github.io/src/assets/MLN111/img/Q4.png',
+      Q5: 'https://dngarsenal.github.io/src/assets/MLN111/img/Q5.png',
+      Q6: 'https://dngarsenal.github.io/src/assets/MLN111/img/Q6.png',
+      Q7: 'https://dngarsenal.github.io/src/assets/MLN111/img/Q7.png',
+      Q8: 'https://dngarsenal.github.io/src/assets/MLN111/img/Q8.png',
+      Q9: 'https://dngarsenal.github.io/src/assets/MLN111/img/Q9.png',
+      Q10: 'https://dngarsenal.github.io/src/assets/MLN111/img/Q10.png'
     };
 
     const questions = [
